added page for local debugging and config checks
